# money_budget_tracking_app

./: .gitignore  README.md  asset-manifest.json  build.sh  help.txt  index.html  package-lock.json  pyproject.toml  requirements.txt
accounts/: serializers.py  urls.py  views.py
client/: package-lock.json  package.json
client/src/: App.css  App.js  Sidebar.jsx  axios.js
core/: settings.py  urls.py
splitter/: admin.py  models.py  serializers.py  urls.py  views.py
splitter/migrations/: 0001_initial.py  0002_simple_transaction_category_alter_category_title.py  0003_personal_expense_created_at_and_more.py  0004_userprofile_alter_personal_expense_user_and_more.py  0005_userprofile_expenditure_userprofile_income.py  0006_alter_userprofile_expenditure_and_more.py  0007_alter_personal_income_user.py  0008_remove_userprofile_expenditure_and_more.py  0009_alter_personal_expense_user_and_more.py  0010_alter_simple_transaction_receiver_and_more.py  0011_alter_simple_transaction_receiver_and_more.py  0012_debt_category_splitroom_category_and_more.py  0013_userprofile_expense_userprofile_income_and_more.py  0014_alter_debt_room.py  0015_debt_created_at_delete_simple_transaction.py  0016_alter_userprofile_friends.py
static/css/: main.c2c8d016.css  main.c2c8d016.css.map
static/js/: main.0c8241e7.js  main.0c8241e7.js.map  main.2f408632.js  main.2f408632.js.map  main.3cd748b9.js  main.3cd748b9.js.LICENSE.txt  main.3cd748b9.js.map  main.5a15b492.js  main.5a15b492.js.map  main.7bda759c.js  main.7bda759c.js.map  main.8d1cf60a.js  main.8d1cf60a.js.map  main.aef064e4.js  (+1 more)
(+19 files in other folders)
