[tool.poetry]
name = "money-budget-tracking-app"
version = "0.1.0"
description = "money budget tracking app backend"
authors = ["yaswanthsaivendra <yaswanthsaivendra@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.10"
django = "^4.2.7"
django-rest-framework = "^0.1.0"
django-cors-headers = "^4.3.0"
gunicorn = "^21.2.0"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
